# Flask-Card

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  db.sqlite  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
flask_card/: __init__.py  auth.py  config.py  forms.py  main.py
flask_card/auth/: forms.py  views.py
flask_card/flashcards_board/: __init__.py  form.py  views.py
flask_card/main/: form.py  views.py
flask_card/models/: __init__.py  categories.py  collections.py  flashcards.py  users.py
flask_card/profile/: form.py  views.py
flask_card/static/css/: auth.css  dashboard.css  flashcard_board.css  flashcard_preview.css  outer.css
flask_card/static/js/: populateFlashcards.js
flask_card/templates/: 404page.html  base.html  collection_edit.html  dashboard.html  flashcard_showcase.html  flashcardboard.html  index.html  landing.html  login.html  profile.html  signup.html
flask_card/templates/auth/: signup.html
flask_card/templates/flashcard/: flashcard_edit.html  flashcard_showcase.html  flashcardboard.html
flask_card/templates/partials/: breadcrumbs.html  profile_tabs.html
flask_card/templates/profile/: edit_profile.html  profile.html
migrations/versions/: 42d0260f6216_right_wrong_answers_in_collection.py  5059405af9aa_add_category_column.py  a3fe59d4d61a_init_migration.py  adb8551fc20f_add_category.py  ee9a5cae3684_remove_flashcard_column.py  ffa1822d2bff_add_answer_input_type.py
scripts/: dev.sh
